--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,24 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The professional portfolio of Aaron Cheng, a software development student based in Baton Rouge, showcasing projects, skills, and experiences in software engineering. Student at LSU."
     />
+    <meta
+      name="keywords"
+      content="Aaron Cheng, software developer, Baton Rouge, portfolio, projects, software engineering student, Louisiana State University, LSU"
+    />
+    <meta
+      property="og:title"
+      content="Aaron Cheng | Software Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Discover the projects and achievements of Aaron Cheng, a passionate software developer from Baton Rouge."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/path_to_image.jpg" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
